Time Lord Bio done

--- a/roobiology.html
+++ b/roobiology.html
@@ -255,7 +255,7 @@
 				<span class="A-audiobook">In the pre-Time War era there are between 3 and 9 million Gallifreyans living on the planet. </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid.&nbsp; </span>They
+				<span class="A-audiobook">A loom consists of <span class="A-notbbc">a gene-weaving frame with</span> millions of fine cords which weave </span><span class="A-notbbc">matter (probably rapid growth biomass) and biodata together <span class="A-audiobook">in a vat of semiotic fluid. &nbsp;<span class="A-tv">The subject begins as an egg with the consistency of jelly. </span></span>They
 smell of tangy celestial potental. The frames of some looms are silver.
 A new loom probably takes over 11 years to produce its first loomling. </span>
 				<span class="A-audiobook">The Looms are held in the loomshed of the&nbsp;physical house. Each House's loom has its own genetic Loom core, which serves as
@@ -764,14 +764,15 @@ done the effect can last for less the a few weeks or for years.</span></span>
 took several generations of genetic engineering to re-introduce psychic
 abilities to the loom born Gallifreyans, but in the modern era, all
 Gallifreyans are psychic. &nbsp;Though some have greater psionic sensitivity
-then others, <span class="A-notbbc">most are low level telepaths.</span> The Epiphysis Cerebri (pineal gland)‎‎ on a Gallifreyan is
+then others, <span class="A-notbbc">most are low level telepaths.</span>
+The Epiphysis Cerebri (pineal gland)‎‎ on a Gallifreyan is
 twice the size of a humans. It is sometimes known as the Third Eye and
 is the part of the brain that is the source of psychic activity.
 Gallifreyan psionics work via neural congruence and sympathetic
 resonance. Gallifreyans suffer psychic feedback, fever and headaches as
 their telepathic abilities mature. Whenever two Gallifreyans meet there
-is a courtesy mind-touch to identify and acknowledge each other. Since
-every Gallifreyan has a unique psycho-kinetic signature, this allows</span>
+is a courtesy mind-touch to identify and acknowledge each other. Every
+Gallifreyan has a unique psycho-kinetic signature. &nbsp;This allows</span>
 				<span class="A-tv"> them to recognize each other even if they are wearing a new body. </span>
 				<span class="A-audiobook">Their telepathic intuition allows them to determine which people are Gallifreyans and which are not.<br></span>
 			</div>
@@ -788,12 +789,12 @@ every Gallifreyan has a unique psycho-kinetic signature, this allows</span>
 				<span class="A-tv">Gallifreyans can use touch telepathy to form
 					<span class="A-audiobook">entrelacement.</span> This is traditionally done by having one Gallifreyan touch the other's face and both announcing 'Contact.' </span><span class="A-audiobook">Entrelacement<span class="A-tv"> allows the mutual transfer of
 						<span class="A-game">emotions and </span>large amounts of information very quickly.
-						<span class="A-game">Entrelacement is generally reserved for people with a very intimate relationship. </span>
+						<span class="A-game">Entrelacement is generally reserved for people with a very intimate relationship.&nbsp;</span></span></span>
+				<span class="A-audiobook">
+					<span class="A-tv"> <br><br></span></span><span class="A-audiobook"><span class="A-tv"><span class="A-game"></span>
 					</span>
 				</span>
-				<span class="A-audiobook">Its even easier for a Gallifreyan to contact another version of themselves (especially if they are in the same time zone).</span>
-				<span class="A-audiobook">
-					<span class="A-tv"> <br><br>If they are trying to telepathically contact one of their own incarnations they don't even need to be touching. Indeed
+				<span class="A-audiobook">Its even easier for a Gallifreyan to contact another version of themselves (especially if they are in the same time zone). </span><span class="A-audiobook"><span class="A-tv">If they are trying to telepathically contact one of their own incarnations they don't even need to be touching. Indeed
 						such contact can be made via the astral </span></span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook">(the 5th Dimension) </span></span></span><span class="A-audiobook"><span class="A-tv">plane&nbsp;<span class="A-alternate A-audiobook"></span>over galactic distances and times.
 						</span></span><span class="A-audiobook"> Psychic pulses travel at a 170,000 times the speed of light. </span><span class="A-audiobook"><span class="A-tv"><span class="A-audiobook">Time Lords attempting to send telepathic signals through the Astral Vortex can encode them with their own psychic patterns.
 							This makes it impossible for anyone to decode the message except a future or past version of the transmitting Time
@@ -809,7 +810,7 @@ point where they might not have the willpower to return to the three dimensional
 			<div class="section">
 				<span class="A-audiobook"><span class="A-game">Artron
 echos are emited by all sapient beings. The greater affect that a
-person is going to have on coming history the stronger the echos.&nbsp;</span>Every Time Lord possesses an entire quantum of Artron Energy which gives them a unique artron energy signature.&nbsp;</span><span class="A-audiobook">Time
+person is going to have on coming history the stronger the echos.&nbsp;</span></span><span class="A-audiobook">Residul psionic energy makes a Gallifreyan’s teeth itch. The older the energy, the stronger the itch.</span><span class="A-audiobook"><span class="A-game"></span> Every Time Lord possesses an entire quantum of Artron Energy which gives them a unique artron energy signature.&nbsp;</span><span class="A-audiobook">Time
 Lords tend to accumulate more artron energy as they travel the Vortex.
 &nbsp;To prevent it from reaching dangerous levels, the amount possesed
 is reset with each regeneration. Gallifreyans generate Artron
@@ -1446,7 +1447,8 @@ also possible for them to regenerated in an animal like a talking dog
 (which could change breeds with every subsequent regeneration) <span class="A-licensed">or a cat.</span> <span class="A-tv">Damaged
 genetics during a regeneration can leave the subject with unstable DNA
 leading to cellular degradation. This requires frequent consumption of
-the <span class="A-fanon">artron</span> life energy of others to survive, but with each live consumed the period of stability shortens.</span> Other
+the <span class="A-fanon">artron</span> life energy of others to survive, but with each live consumed the period of stability shortens.</span>
+Other
 legends tell of regenerations that had only regenerated half of the
 body (which can happen if the subject regenerates in a strong time
 dilation field), regenerations where the body was changed but not the
@@ -1457,7 +1459,10 @@ variations. There are rumors and heresies that, at one point in
 Gallifrey's history, a Shadow House existed which would hold
 Gallifreyans whose regenerations have failed in some way. These
 problems were only corrected within the last several thousand years.
-</span><br><span class="A-alternate"><br> </span>
+The Free Time organization created the Dogma Virus.&nbsp; This virus
+would remain dormant in Gallifreyans until they regenerated, at which
+point the subject’s new incarnaiton turned into a violent mindless
+being. </span><br><span class="A-alternate"><br> </span>
 			</div>
 			<div class="section">
 				<span class="A-game">After regenerating most Gallifreyans will retreat into a healing trance for up to 6 hours.<span class="A-licensed"> A Gallifreyan's blood pressure can drop to 70/70 millimeters of mercury during this time. </span></span><span class="A-audiobook"><span class="A-tv">Waking
@@ -1515,7 +1520,7 @@ normal biological energy levels. </span><span class="A-tv"><span class="A-game">
 				</span>
 				<span class="A-tv">Sex Change Regenerations are possible,</span>
 				<span class="A-fanon">(probably</span>
-				<span class="A-tv">by splitting a males diploid cells into haploids)&nbsp;</span><span class="A-alternate"></span><span class="A-fanon"></span>
+				<span class="A-tv">by splitting a males diploid cells into haploids). </span><span class="A-alternate"></span><span class="A-fanon"></span>
 				<span class="A-tv">Each body is referred to as an "incarnation" or a "life-span"</span><span class="A-tv">. </span><span class="A-audiobook">Public discussions of regeneration among Gallifreyans appears to be similar to sex amongst humans (i.e. not good table
 					manners). Regeneration is considered to be a private matter - not to be witnessed by others (artificial or otherwise)
 					<span class="A-game">and are generally conducted in a very quiet location. </span>However a loom automatically records the genetic metamorphosis
@@ -1527,7 +1532,7 @@ normal biological energy levels. </span><span class="A-tv"><span class="A-game">
 				<span class="A-audiobook">It should also be noted that the last few life-spans generally don't last as long as the earlier bodies. </span>
 				<span class="A-game">This is because elderly Gallifreyans tend to regenerate more often in an attempt to dispel physical and mental malaise.
 				</span>
-				<span class="A-audiobook">With every regeneration more of the Nucleolingua Symbiotica is consumed. Thus it is possible to determine how many remaining
+				<span class="A-audiobook">With every regeneration more of the nucleolingua symbiotica is consumed. Thus it is possible to determine how many remaining
 					incarnations a Gallifreyan has by measuring the amount of Nucleolingua Symbiotica remaining in the tri-strand DNA.</span>
 				<span class="A-tv">The last few regenerations of a cycle appear to produce much more excess energy, enough to severely damage a TARDIS control
 					room. </span>
@@ -1563,7 +1568,7 @@ Gallifreyan to move freely. <br><br></span>
 					<span class="A-audiobook">surgically</span> implant a new regenerative cycle </span>
 				<span class="A-audiobook">by manipulating the Nucleolingua Symbiotica, </span>
 				<span class="A-tv">but this can only be done with the permission of the entire High Council. </span><span class="A-audiobook">Such a process requires cryogenetic
-extraction to generate a Elysian Field.&nbsp; Such a field can even
+extraction to generate a elysian field.&nbsp; Such a field can even
 regenerate a Gallifreyan's who has exhausted their capability of
 regenerating, while simultaniously bestowing an entirely new
 regeneration cycle. </span><span class="A-fanon">This is probably achieved using </span>
