--- a/roogallifrey.html
+++ b/roogallifrey.html
@@ -672,7 +672,7 @@ Heartshaven (or Dvora).&nbsp;</span><span class="A-audiobook">The Arkanian Deser
 					<span class="A-audiobook">Gold has no special value on Gallifrey </span>
 					<span class="A-fanon">(indicating it is quite common?) </span>
 					<span class="A-audiobook"> The planet also has a significant amount of Gallifreyan Zinc which is one of the strongest metals in the universe. &nbsp;<span class="A-licensed">Madranite is fairly common as well.</span> </span>
-					<span class="A-alternate">The area of Gallifrey known as Mansippia once had massive amounts of Zyton ore.</span><span class="A-audiobook">&nbsp;</span><span class="A-fanon"><span class="A-licensed"></span>The Arcadian Sector of </span>
+					<span class="A-alternate">The area of Gallifrey known as Mansippia once had massive amounts of Zeiton ore.</span><span class="A-audiobook">&nbsp;</span><span class="A-fanon"><span class="A-licensed"></span>The Arcadian Sector of </span>
 					<span class="A-tv">Gallifrey is the only place in the cosmos where one can find white-point star diamonds.
 						<span class="A-fanon">This is why</span> Arcadian Diamonds the most expensive substance in the Galaxy. <span class="A-game">White
 Star diamonds are one of the stronest stones in the cosmos and can even
