--- a/roogovernment.html
+++ b/roogovernment.html
@@ -649,11 +649,13 @@ ends. For more information on the Great Key and the Moment see </span><a href="r
 					<span class="A-licensed">High</span> President of the Supreme Council of Gallifrey </span>
 				<span class="A-audiobook">and all of her Dominions, </span>
 				<span class="A-tv">rules Gallifrey and has the obedience of all Colleges. </span>
-				<span class="A-notbbc">The Head of the Presidency is seen as the physical manifestation of the Laws of Time and </span>
-				<span class="A-audiobook"><span class="A-tv">is the holder of the Wisdom of Rassilon,</span> Preserver of the Matrix, Guardian of the Legacy of Omega,</span>
+				<span class="A-notbbc">The
+Head of the Presidency is seen as the physical manifestation of the
+Laws of Time and and avatar for the power of the Time Lords. </span>
+				<span class="A-audiobook"><span class="A-tv">He is the holder of the Wisdom of Rassilon,</span> Preserver of the Matrix, Guardian of the Legacy of Omega,</span>
 				<span class="A-tv">
 (probably) the Keeper of the Legacy of Rassilon, Defender of the Laws
-of Time, and Protector of Gallifrey. &nbsp;He is sworn to follow the
+of Time, and Protector of Gallifrey. He is sworn to follow the
 Wisdom of Rassilon and the Law of Gallifrrey. </span>
 				<span class="A-audiobook">He also carries the title First Time Lord.&nbsp;</span><span class="A-tv">Like
 the Chancellor, the President is addressed as "Your
@@ -679,17 +681,20 @@ timeline. </span>
 				<span class="A-tv">It is also likely that the President knows that Omega survived the detonation of the star </span>
 				<span class="A-audiobook">Quaba.&nbsp;</span><span class="A-tv"><span class="A-notbbc"></span></span><span class="A-tv"> Up until Arc of Infinity the Presidential Code was 4544553916592.<br><br></span><span class="A-tv"><span class="A-notbbc">The Presidency consists
 						of three Time Lords, </span>
-					<span class="A-game">the Lord President (or Head) and two attaches who function as secretaries, and advisors. The attaches are not allowed
+					<span class="A-game">the Lord President (or Head), and two attaches who function as secretaries, and advisors. The attaches are not allowed
 						to serve on the High Council. </span></span><span class="A-audiobook">For some of Gallifrey's history it was traditional for each President to have a Presidential CAT </span>
 				<span class="A-licensed">(Calculating Animal with a Tail). </span>
-				<span class="A-audiobook">This tradition was discontinued when the Doctor was at the Time Academy. </span><span class="A-tv"><br></span><span class="A-tv"><span class="A-audiobook"></span><span class="A-audiobook"></span></span>
+				<span class="A-audiobook">This tradition was discontinued when the Doctor was at the Time Academy. <span class="A-tv">The
+stasers carried by the Presidential Personel Security Gaurds can not be
+set for stun. &nbsp;At their lowest setting they will induce a
+regeneration in any Gallifrey who is hit by one.</span> </span><span class="A-tv"><br></span><span class="A-tv"><span class="A-audiobook"></span><span class="A-audiobook"></span></span>
 			</div>
 			
 			
 			
 			<div class="section">
-				<span class="A-audiobook">The first time the President Elect puts on the Sash of Rassilon his is altered to become Biodata Ultra-Aware, which allows
-					him to predict and manipulate biodata in a way no other Time Lord can. It also gives him the presidential bio-code which
+				<span class="A-audiobook">The first time the President Elect puts on the Sash of Rassilon he is altered to become Biodata Ultra-Aware,&nbsp;which allows
+					him to predict and manipulate biodata in a way no other Time Lord can. <span class="A-notbbc">The Lord President is, metaphysically linked with the Laws of Time.&nbsp;</span>These modifications also give him the presidential bio-code which
 					allows him to access the Matrix and the Matrix doors. </span>
 				<span class="A-tv">The President
 					<span class="A-audiobook"> is the Preserver of the Matrix and</span> holds the Matrix
@@ -748,7 +753,7 @@ chose Pandak's Square for their ceremony. &nbsp;</span><span class="A-tv">Presid
 				<span class="A-tv"><br><br>The current President can not be but on trial, but Presidents can be impeached </span>
 				<span class="A-audiobook">by a vote of no-confidence from the High Council. A President can be called to give evidence in judicial investigation.
 					</span>
-				<span class="A-tv">After a certain amount of time (at least 900 years) President's face mandatory retirement. <span class="A-audiobook">If you have served as President before, you must regenerate before serving again.</span> Ex-Presidents appear to retain
+				<span class="A-tv">After a certain amount of time (at least 900 years) President's face mandatory retirement. <span class="A-audiobook">If you have served as President before, you must regenerate before serving again.</span> </span><span class="A-audiobook"><span class="A-notbbc">Even after he leaves office, </span></span><span class="A-audiobook"><span class="A-notbbc">an ex-president keeps the biodata modifications, (including the link to the Laws of Time) the Sash granted him.&nbsp;</span></span><span class="A-tv">Ex-presidents appear to retain
 					the right to access the Matrix's predictive abilities </span>
 				<span class="A-audiobook">and call for Presidential Inquires. As of President Flavia there have been 412 Presidents of Gallifrey. </span>
 			</div>
@@ -1909,13 +1914,13 @@ statements that the Matrix predicts that he will make in his future. </span><spa
 								<span class="A-audiobook">Biodata Amendment </span>
 								<ul>
 									<li>
-										<span class="A-audiobook">Retro-active gene manipulation to make a new person who would not commit the crime</span>
+										<span class="A-audiobook">Retro-active gene manipulation to make a new person who would not commit the crime.</span>
 									</li>
 									<li>
 										<span class="A-game">A sentence handed out by the Supreme Court. </span>
 									</li>
 									<li>
-										<span class="A-audiobook">Used on aliens who are caught spying on the Time Lords</span>
+										<span class="A-audiobook">Used on aliens who are caught spying on the Time Lords.</span>
 									</li>
 								</ul>
 							</li>
@@ -1959,9 +1964,8 @@ statements that the Matrix predicts that he will make in his future. </span><spa
 										<span class="A-audiobook">at the Place of Termination </span>
 										<span class="A-tv">inside a
 											<span class="A-audiobook">molecular</span> dispersal chamber </span>
-										<span class="A-audiobook">with a termination tube. The subject is first vapor </span>
-										<span class="A-tv">The
-subject is first vaporised and the remains of the criminal are
+										<span class="A-audiobook">with a termination tube. </span><span class="A-tv">The
+subject is first vaporised and then the remains of the criminal are
 dispersed through time and space to the nine corners of the universe. </span><span class="A-licensed"><span class="A-audiobook">This process takes about 40 seconds.</span></span></li><li><span class="A-licensed">Afterward vaporisation, all records of the Time Lord's existence are deleted.</span></li>
 									<li>
 										<span class="A-tv">As of Arc of Infinity, Morbius was the only Time Lord to be executed.</span>
@@ -2003,8 +2007,9 @@ dispersed through time and space to the nine corners of the universe. </span><sp
 							<li>
 								<span class="A-audiobook"><span class="A-tv">Unhappening from History</span> </span>
 								<ul>
-									<li><span class="A-audiobook">The Time Lords can remove a single soul from history so that nobody will ever remember they existed.&nbsp; </span>
-										<span class="A-audiobook"></span></li><li><span class="A-audiobook"> Used for aliens who are caught spying on the Time Lords.&nbsp;</span></li><li><span class="A-audiobook">The Oubliette of Eternity <span class="A-tv">can be used on entire species</span> </span><span class="A-audiobook">removing entire worlds from the Web of Time, </span><span class="A-audiobook">but this is very rarely done. &nbsp; </span>
+									<li><span class="A-audiobook">The
+Time Lords can reverse a person's time stream to remove them from
+history so that nobody will ever remember they existed.&nbsp;</span></li><li><span class="A-audiobook">Gross and extreme violations of the Laws of Time can lead to a Time Lord receiving this scentence.&nbsp; </span><span class="A-audiobook"></span></li><li><span class="A-audiobook">Used for aliens who are caught spying on the Time Lords.&nbsp;</span></li><li><span class="A-audiobook">The Oubliette of Eternity <span class="A-tv">can be used on entire species</span> </span><span class="A-audiobook">removing entire worlds from the Web of Time, </span><span class="A-audiobook">but this is very rarely done. &nbsp; </span>
 									</li>
 									<li>
 										<span class="A-audiobook">Carried out using an </span>
