--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -1710,8 +1710,7 @@ warning. The Doctor." (The name is signed over the Prydonian Seal)</span>
 									<span class="A-audiobook">A standard Gallifreyan keyboard has 723 letter keys, and 13 numeric keys across the top. </span>There are only 12
 									keys on a standard Gallifreyan numeric keypad. Its possible that their number system is base 12
 									<span class="A-fanon">and the 13th key on a full keyboard might be for positive/negative notation. </span>
-								</span> Messages are written in equations that must be solved to be deciphered. </span>
-							<span class="A-audiobook">This half writing, half math language is very precise, but not very practical. </span>
+								</span> Messages are written in equations that must be solved to be deciphered.&nbsp;</span><span class="A-audiobook"> This half writing, half math language is very precise, but not very practical. </span>
 						</p>
 						<figure>
 							<img src="images/you.jpg" alt="You">
