--- a/rootimeline5.html
+++ b/rootimeline5.html
@@ -11916,11 +11916,7 @@ Titan III. &nbsp; <span class="A-game">Titan III is legendary place of isolation
 							&nbsp;&nbsp;&nbsp; </span>&nbsp; &nbsp; &nbsp;&nbsp;
 					</span>
 					<span class="A-tv">Vengeance on Varos: In attempting to repair the TARDIS the Doctor causes a total power failure and later jettisons 75%
-						of the Storage Holds in the TARDIS</span>
-					<span class="A-fanon"></span>
-					<span class="A-tv">
-						<span class="A-fanon">. &nbsp;</span>He acquires fresh Zeiton-7 for the TARDIS from Varos. &nbsp;
-						<span class="A-licensed">The Doctor secretly realizes that Varos was going to realize how much their Zyton ore was worth sooner or later. &nbsp;</span>
+						of the Storage Holds in the TARDIS.&nbsp;</span><span class="A-tv"><span class="A-fanon"></span>He acquires fresh Zeiton-7 for the TARDIS from Varos.&nbsp;<span class="A-licensed">The Doctor secretly realizes that Varos was going to realize how much their Zeiton ore was worth sooner or later. &nbsp;</span>
 					</span>
 				</p>
 				<p>
