--- a/rootimeline6.html
+++ b/rootimeline6.html
@@ -831,7 +831,7 @@ to his TARDIS so that it screens all the signals she receives.</span>
 						<span class="A-audiobook">
 							<span class="A-game">?? &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; (in the Pre-War era from the Doctor's POV)
 								<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; The Diamond World: The Doctor visits Varos thousands of years
-								before humanity began mining it. &nbsp;At this point the planet is far lager and composed almost entirely of Zyton-7
+								before humanity began mining it. &nbsp;At this point the planet is far lager and composed almost entirely of Zeiton-7
 								ore. &nbsp;Automated Gallifreyan Mining ships from the Time War era are strip-mining the planet. &nbsp;The operation
 								is being overseen by well armed Time Warriors. &nbsp;The Doctor helps them deal with a creature they find buried
 								in world. </span>
