--- a/rootimeline7.html
+++ b/rootimeline7.html
@@ -1291,7 +1291,7 @@ be found there. &nbsp; &nbsp; &nbsp;</span>
 The Diamond World: Automated Gallifreyan Mining ships begin
 strip-mining Varos thousands of years before humanity began mining it.
 At this point the planet is far lager and composed almost entirely of
-Zyton-7 ore.&nbsp;&nbsp; The operation is being overseen by well armed
+Zeiton-7 ore.&nbsp;&nbsp; The operation is being overseen by well armed
 Time Warriors.&nbsp; The Doctor (from the pre-War era) helps them deal
 with a creature they find buried in world. </span>
 	</p>
