--- a/rooweb.html
+++ b/rooweb.html
@@ -324,7 +324,7 @@
 				<span class="A-audiobook">A 'fragment' <span class="A-fanon">(more of a hyper-dimensional protrubance)</span> of the Eye of Harmony is used as the seed to create a copy of the Eye in every TARDIS. <br><br>Significant
 temporal paradoxes associated with Inner Time can cause fluctuations in
 the artron power output of the Eye of Harmony, enough to endanger
-TARDIS travel. &nbsp;It doesn’t take much of a weakness of the power
+TARDIS travel.&nbsp;It doesn’t take much of a weakness of the power
 output of the Eye to disable almost all of Gallifrey’s defenses
 (including the Validium).&nbsp;Even the transduction barrier would
 begin to fail. The Eye of Harmony can be drained remotely with a
@@ -526,7 +526,7 @@ to fit their observations.&nbsp;</span><span class="A-audiobook">The Universal <
 the moment that the Web was anchored, the High Council stood before
 Omega's Black Star as it was transformed into the Eye of Harmony. At the same relative time
 other Time Lords in Proto-Time Travel Capsules waited at the extreme
-boundaries of what would become the Noosphere. </span>
+boundaries of what would become the Noosphere. This anchored the biology of the <br><br><br>Great Houses of Gallifrey to History itself. </span>
 				<span class="A-audiobook">The Eye created a Universe of positive time&nbsp;</span><span class="A-audiobook">by locking down the Web of All-Time within the Space-Time Vortex. </span><span class="A-audiobook"><span class="A-notbbc">This web is </span>
 				</span>
 				<span class="A-notbbc">this structure that all future races used to build their own histories on. </span>
