--- a/roogovernment.html
+++ b/roogovernment.html
@@ -240,24 +240,22 @@
 			<div class="section">
 				<p>
 				<span class="A-licensed">The Capitol is considered to be Gallifrey's First City. </span><span class="A-tv">Several Time Lords use the word Gallifrey to indicate the Capitol (and not the planet in general).
-					<span class="A-licensed">Its official name is Capitol City, </span><span class="A-notbbc">but some very unreliable sources call it Sage City. </span>Most Gallifreyans simply refer to it as "the Capitol." 
+					<span class="A-licensed">Its official name is Capitol City, </span><span class="A-notbbc">but some very unreliable sources call it Sage City <span class="A-fanon">(possibly its name from the era of the Pythia?).</span> </span>Most Gallifreyans simply refer to it as "the Capitol." 
 				</span></p>	
 				<p> 
-					<span class="A-tv">The Capitol is</span>
-				<span class="A-infinity"> in the Northern Hemisphere </span>
+					<span class="A-tv">The Capitol is</span> <span class="A-infinity">just north of the planet's equator, </span>
 				<span class="A-tv">in </span>
 				<span class="A-licensed">the wastelands at the heart of </span>
 				<span class="A-tv">the
 continent of Wild Endeavor. It sits in the valley between snow the
 capped mountains of Solace and Solitude. These are part of a <span class="A-audiobook">desert </span>mountain range</span>
 				<span class="A-tv"> that stretches to the horizon. </span>
-				<span class="A-audiobook">The massive Mount Cadon dwarfs the Capitol.
-					<span class="A-tv">The only thing that grows on these mountains a deep red grass. </span>
+				<span class="A-audiobook"><span class="A-tv">The only thing that grows on these mountains a deep red grass. </span></span><span class="A-audiobook">The massive Mount Cadon (aka Mount Lung) is found to the south <span class="A-infinity">of the nearby equator</span><span class="A-fanon"></span> and dwarfs the Capitol.<span class="A-tv"> </span>
 				</span>
 				<span class="A-audiobook">During the time of the Pythia there was a volcanic chasm running through the Capitol known as the Crevasse of Memories That Will
-					Be.</span><span class="A-licensed"> In modern times, the</span><span class="A-fanon"><span class="A-licensed"> Crevasse is located outside the Capitol.</span> This might have been where the Untempered Schism had been for billions of years.&nbsp;</span><span class="A-tv">Rassilon redesigned the rest of the Capitol </span>
+					Be.</span><span class="A-licensed"> In modern times, the remains of the</span><span class="A-fanon"><span class="A-licensed"> Crevasse is located outside the Capitol.</span> This might have been where the Untempered Schism had been for billions of years.&nbsp;</span><span class="A-tv">Rassilon redesigned the rest of the Capitol </span>
 				<span class="A-audiobook">after coming to power.</span><span class="A-tv"></span><span class="A-audiobook"> </span><span class="A-tv">In the modern era the Schism is located outside the Capitol. </span><span class="A-audiobook">The Capitol used to have a harbor </span>
-				<span class="A-fanon">(but the oceans receded). </span>
+				<span class="A-fanon">(but the sea dried up). </span>
 				<span class="A-audiobook">The Kasterborous Borealis can be seen from the Capitol, as can Mount Cadon. The Capitol might suffer from a bitter wind
 					from the Northern Lakes<span class="A-licensed"> and was covered in snow for much of the year. </span></span>
 				</p>
