--- a/rootimelord.html
+++ b/rootimelord.html
@@ -829,20 +829,22 @@ my actions and my thoughts." </em>
 			<h2>THE PRYDONIAN ACADEMY OF TIME
 				<br>The University, The Time Lord Academy</h2>
 			<div class="section">
-				<span class="A-game">All Gallifreyans have the potential to become Time Lords but it was a title they would have to earn.&nbsp;</span><span class="A-tv"></span><span class="A-audiobook"><span class="A-tv">The </span>Prydon College's <span class="A-tv">Time Academy is the only one that can grant the title of Time Lord</span>
+				<span class="A-game">All Gallifreyans have the potential to become Time Lords but it was an honor they have to earn.&nbsp;</span><span class="A-tv"></span><span class="A-audiobook"><span class="A-tv">The </span>Prydon College's <span class="A-tv">Time Academy is the only one that can grant the title of Time Lord</span>
 – so all would-be Time Lord</span><span class="A-audiobook">&nbsp;</span><span class="A-audiobook"></span><span class="A-audiobook">have to be inducted there after graduating<span class="A-game"> from the 5th grade of </span>their chapter’s academy. Novices take&nbsp;</span><span class="A-audiobook">The entrance examination is while still in brainbuffing and it is judged by Adjudicators.</span><span class="A-audiobook"> </span><span class="A-game"><span class="A-licensed">Failure was one of the major fears of every 7 year-old.</span> </span>
 						<span class="A-audiobook"></span><span class="A-game">If they are score is accepted then, after 12 years
-							<span class="A-tv">with their chapter's academy, they can be enrolled in the <span class="A-audiobook">Prydon</span> Time Academy. </span></span><span class="A-audiobook"><span class="A-game"></span></span><span class="A-game"><span class="A-tv"><br><br></span></span><span class="A-licensed">The education of a Time Lord is considered to be an honor and a privilege,</span>
+							<span class="A-tv">with their chapter's academy, they can be enrolled in the <span class="A-audiobook">Prydon</span> Time Academy. </span></span><span class="A-audiobook">Enrollment begins with the Ceremony of Matriculation. </span><span class="A-audiobook"><span class="A-game"></span></span><span class="A-game"><span class="A-tv"> <br><br></span></span><span class="A-licensed">The education of a Time Lord is considered to be an honor and a privilege,</span>
 				<span class="A-alternate"> but costs a House a small fortune. </span>
 				<span class="A-audiobook">At some points in Gallifrey's history some aliens were allowed to take classes at the Academy. These aliens are not
 					allowed to learn any temporal engineering skills. One of these races was the Gresaurus, another was the War Lord Aliens.
 					The later were expelled for trying to learn how to build TTCs (TARDISes).<br> </span>
 			</div>
 			<div class="section">
-				<span class="A-audiobook">Enrollment begins with the Ceremony of Matriculation. The Time Academy <span class="A-licensed">makes up Sector 6 of the Capitol </span>and is a self-contained city annexed to the Capitol.
-					The Academy covers 28 square miles and has it's own TARDIS cradles and scaphe bays. Its made up of glass towers, covered
-					walkways, dormitories, lecture halls, gymnasiums, and eateries. </span>
-				<span class="A-infinity">Most (if not all) of the </span>
+				<span class="A-audiobook">The Time Academy <span class="A-licensed">makes up Sector 6 of the Capitol </span>and is a self-contained city annexed to the Capitol.
+					The Academy covers 28 square miles and sits just south of the equator. Its made up of glass towers, covered
+					walkways, dormitories, lecture halls, gymnasiums, eateries, </span><span class="A-audiobook">TARDIS cradles and scaphe bays</span><span class="A-audiobook">.
+All of this is dominated by a ebony building sitting at the northern
+base of Mount Cadon (aka Mount Lung, aka Mount Plutarch). </span>
+				<span class="A-infinity"><br><br>Most (if not all) of the </span>
 				<span class="A-game">Junior Cardinals and </span>
 				<span class="A-infinity">Time Lord Councilors teach at the Academy. </span>
 				<span class="A-audiobook">The
@@ -861,9 +863,9 @@ have partial access to the Matrix.<br> </span>
 				<span class="A-audiobook">The Great Curriculum of the Academy has a Codex of Disciplines that they teach. </span>
 				<span class="A-licensed">The
 Codex focuses on Dimensional Engineering, Dimensional Science,&nbsp;TT
-Capsule Construction,&nbsp;The Laws of Time, Cosmic Science, TARDIS
-Operation and Maintenance, Transcendental Dimensions, </span>
-				<span class="A-licensed">Recreational Mathematics (including happy prime numbers), Thermodynamics, Touch Telepathy, Languages, Future History,
+Capsule Construction,&nbsp;The Laws of Time, <span class="A-tv">Cosmic Science, TARDIS
+Operation and Maintenance, </span>Transcendental Dimensions, </span>
+				<span class="A-licensed"><span class="A-tv">Recreational Mathematics (including happy prime numbers),</span> Thermodynamics, Touch Telepathy, Languages, Future History,
 					Temporal Classics, and Stasis Cube Art. </span>
 				<span class="A-game">All subjects that don't relate to temporal phenomenon (such as art, culture, and biology) are classified as General Studies.
 					General Studies classes are viewed as being less important by the Time Lords. Its possible</span>
