finished Stuff pages

--- a/roolifedeath.html
+++ b/roolifedeath.html
@@ -1165,24 +1165,27 @@ pieces in the air lost.  </span>
 					<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 					<h2>DEATH OF A GALLIFREYAN</h2>
 					<div class="section">
-						<span class="A-audiobook">Most Gallifreyans they usually choose there final Death Day between 7,000 </span>
+						<span class="A-audiobook">Most Gallifreyans they usually choose there final deathday between 7,000 </span>
 							<span class="A-licensed">and 12,000 </span>
-							<span class="A-infinity">(usually at about age 10,000). </span><span class="A-tv">As
+							<span class="A-infinity">(usually at about age 10,000). </span><span class="A-audiobook">They often spend the last years leading up to their final chosen deathday in meditation.</span><span class="A-tv"> &nbsp;</span><span class="A-audiobook">Because </span>
+				<span class="A-tv">the minds (or souls) Time Lords are stored in the APC after death</span>
+				<span class="A-audiobook"> they don't fear death. </span><span class="A-tv">As
 their death day approaches a Gallifreyan will use a confession dial as
-part of a purification ritual to face their demons and bring their mind
-to a state of peace the day before they join the memory gardens of the
-Matrix. It was capable of reading the Gallifreyan's mind and
-determining their greatest fears. </span><span class="A-audiobook">They often spend the last years leading up to their final chosen Deathday in meditation.</span><span class="A-tv">
-On the eve of their final death day the Confession Dial is
+part of a purification ritual to face their demons.&nbsp;</span><span class="A-tv">The dial is capable of reading the Gallifreyan's mind and
+determining their greatest fears.</span><span class="A-tv"> </span><span class="A-tv">Time
+Lords, in particular, are expected to face death with dignity.&nbsp;The time leading up
+to the final death day is filled with meditation, repentance,
+acceptance, and contemplation of the absolute.</span><span class="A-tv"> This brings their mind
+to a state of peace the before they join the memory gardens of the
+Matrix.</span><span class="A-tv"> </span><span class="A-tv">Once they have imprinted their last will and Testament on this dial the dial is
 traditionally given to the Gallifreyan's closest friend. The dial will
-only respond to its owner and the chosen friend. Others will receive a
-shock if they attempt to touch it. </span><span class="A-audiobook">Many Gallifreyans have massive ceremonial funerals. These Deathday funerals</span>
-						<span class="A-alternate"> are usually held at the family's house and </span>
-						<span class="A-audiobook">involve lots of Remembrance Flowers.<br></span>
+only respond and open for its owner and the chosen friend. Others will receive a
+shock if they attempt to touch it. </span><span class="A-audiobook"></span><span class="A-audiobook"><br></span>
 					</div>
 					<div class="section">
-						<span class="A-audiobook">
-							<span class="A-alternate"> Legally </span>
+						<span class="A-audiobook">Many Gallifreyans have massive ceremonial funerals. These Deathday funerals</span>
+						<span class="A-alternate"> are usually held at the family's house and </span>
+						<span class="A-audiobook">involve lots of Remembrance Flowers. </span><span class="A-audiobook"><span class="A-alternate">Legally </span>
 							<span class="A-tv">all deceased consciousness
 								<span class="A-audiobook"> (even down to the lowliest chancellery guard)</span> must be interned in the Amplified Panatropic Computations Network
 								<span class="A-alternate">(sometimes known as the Remembrance Garden) </span>of the Matrix. </span>
@@ -1194,7 +1197,7 @@ shock if they attempt to touch it. </span><span class="A-audiobook">Many Gallifr
 								<span class="A-audiobook">If
 the subject is&nbsp;a Time Lord then the Sarcophagus will carry the
 Seal of Rassilon. This hibernation chamber has a biomechanical locking
-system preventing any non-Gallifreyan from opening it.</span>
+system preventing any non-Gallifreyan from opening it.&nbsp;</span>
 							</span>
 						</span>
 						<span class="A-audiobook">Alternatively the subject's pattern can be held in a Gallifreyan</span>
