--- a/index.html
+++ b/index.html
@@ -196,11 +196,21 @@
 			<br>
 		<div class="article">
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
+			<h2>YOUTUBE PODCAST:</h2>
+			<div class="section">
+				<span class="A-fanon">Rassilon, Omega, and that Other Guy now has a weekly podcast! Check out our first episode...
+					<br> 
+					<a href="https://youtu.be/8fQloEtOq6E" target="_blank">Ep 1: Auld Mortality</a> 
+				</span>
+			</div>
+		</div>
+		<div class="article">
+			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 			<h2>INTRODUCTION:</h2>
 			<div class="section">
 				<span class="A-fanon">Greetings. I am known in these parts as Marnal Gate and this is the world's largest website on the Time Lords of Gallifrey
 					(at least on this planet). This page was originally created in March of 1998 AD.
-					<span style="font-weight: bold;">It was last updated in October of 2021 AD. The following sections have received major updates over the last year...</span>
+					<span style="font-weight: bold;">It was last updated in October of 2022 AD. The following sections have received major updates over the last year...</span>
 				</span>
 				<ul>
 					<li>
@@ -224,21 +234,10 @@
 				</ul>
 			</div>
 			<div class="section">
-				<span class="A-fanon">I have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive
-interest in the history of the history of the Doctor's people from
-before the time of Rassilon to their resurrection after the Time War with
-the Daleks. The idea behind this web page is to trace and collect all
-the little details about Time Lord biology, culture, and history that
-we have been given over the last half-century. I've also added a
-section on the Daleks (though it doesn't cover as much material as I'd
-like). </span>
+				<span class="A-fanon">I have (shall we say 'an obsessive'? Yes. Yes, we shall) an obsessive interest in the history of the history of the Doctor's people from before the time of Rassilon to their resurrection after the Time War with the Daleks. The idea behind this web page is to trace and collect all the little details about Time Lord biology, culture, and history that we have been given over the last half-century. I've also added a section on the Daleks (though it doesn't cover as much material as I'd like). </span>
 			</div>
 			<div class="section">
-				<span class="A-fanon">If
-you have any doubts as to the validity of the data presented, just use
-your mouse to click on the text. This will reveal the color coding for
-sources for the entire paragraph. The Quick Color Key button in the top
-menu will show you the source of each color. Alternately click on the <a href="#key">Sources</a> button for a somewhat more detailed description. </span>
+				<span class="A-fanon">If you have any doubts as to the validity of the data presented, just use your mouse to click on the text. This will reveal the color coding for sources for the entire paragraph. The Quick Color Key button in the top menu will show you the source of each color. Alternately click on the <a href="#key">Sources</a> button for a somewhat more detailed description. </span>
 			</div>
 		</div>
 			<div class="title">
