--- a/index.html
+++ b/index.html
@@ -198,9 +198,11 @@
 			<img src="images/dwlogo.png" alt="Dr Who Logo" class="lead cf">
 			<h2>YOUTUBE PODCAST:</h2>
 			<div class="section">
-				<span class="A-fanon">Rassilon, Omega, and that Other Guy now has a weekly podcast! Check out our first episode...
+				<span class="A-fanon">Rassilon, Omega, and that Other Guy now has a weekly podcast! Check it out, its filled with Time Lore goodness...
 					<br> 
 					<a href="https://youtu.be/8fQloEtOq6E" target="_blank">Ep 1: Auld Mortality</a> 
+					<br> 
+					<a href="https://youtu.be/m_JLrmxLdcI" target="_blank">Ep 2: Full Circle</a> 
 				</span>
 			</div>
 		</div>
