--- a/index.html
+++ b/index.html
@@ -202,7 +202,27 @@
 					<br> 
 					<a href="https://youtu.be/8fQloEtOq6E" target="_blank">Ep 1: Auld Mortality</a> 
 					<br> 
+					<span class="A-fanon">A look at the Big Finish Audio Drama 'Auld Mortality,' the Great Houses of Gallifrey, the House of Lunbarrow, and the TARDIS Time Scanner. </span>
+					<br> 
 					<a href="https://youtu.be/m_JLrmxLdcI" target="_blank">Ep 2: Full Circle</a> 
+					<br> 
+					<span class="A-fanon">A look at the TV Story 'Full Circle,' the possible nature of primeval Gallifrey, and the TARDIS Homing Beacon.    </span>
+					<br> 
+					<a href="https://youtu.be/d8KCsU_DZCU" target="_blank">Ep 3: A Storm of Angels</a> 
+					<br> 
+					<span class="A-fanon">A look at the Big Finish Story 'A Storm of Angels,' the nature of the position of Lord President of Gallifrey, and TARDIS Parallel Control.</span>
+					<br> 
+					<a href="https://youtu.be/BPUJeqkDQI0" target="_blank">Ep 4: The Power of the Doctor</a> 
+					<br> 
+					<span class="A-fanon">A look at the TV Special 'The Power of the Doctor,' the Guardians of the Edge, and Type 70 - 76 TARDISes.    </span>
+					<br> 
+					<a href="https://youtu.be/KC1LEKkvO_0" target="_blank">Ep 5: The Stolen TARDIS</a> 
+					<br> 
+					<span class="A-fanon">A look at the comic 'The Stolen TARDIS,' the Planet Gallifrey, the Flora and Fauna of Gallifrey, and TARDIS Temporal Drift.</span>
+					<br> 
+					<a href="https://youtu.be/FMoK2_pLjus" target="_blank">Ep 6: The Beginning</a> 
+					<br> 
+					<span class="A-fanon">A look at how the Doctor left Gallifrey, the Doctor Who audio 'The Beginning,' the reasons the Doctor left Gallifrey, the mystery of his original name, and the TARDIS Switch Room.</span>
 				</span>
 			</div>
 		</div>
